--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "start": "node src/server.ts",
-    "start:dev": "nodemon --legacy-watch src/server.ts",
-    "build": "tsc"
+    "start": "NODE_PATH=./build node build/server.js",
+    "dev": "nodemon src/server.ts",
+    "build": "tsc",
+    "start:prod": "node build/index.js",
+    "prestart": "npm run build && npm install --production"
   },
   "keywords": [],
   "author": "",
@@ -14,12 +16,17 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.20",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "mysql2": "^3.9.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.9.1",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "reflect-metadata": "^0.2.1",
+    "typeorm": "^0.3.20"
   }
 }
